@@ -1,22 +1,33 @@
 package com.objectcomputing.checkins.services.feedback_request;
 
+import com.objectcomputing.checkins.services.permissions.Permission;
+import com.objectcomputing.checkins.services.permissions.RequiredPermission;
+import com.objectcomputing.checkins.configuration.CheckInsConfiguration;
 import com.objectcomputing.checkins.exceptions.BadArgException;
 import com.objectcomputing.checkins.exceptions.NotFoundException;
 import com.objectcomputing.checkins.exceptions.PermissionException;
 import com.objectcomputing.checkins.notifications.email.EmailSender;
 import com.objectcomputing.checkins.notifications.email.MailJetFactory;
+import com.objectcomputing.checkins.services.email.Email;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
+import com.objectcomputing.checkins.services.memberprofile.MemberProfileUtils;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileServices;
 import com.objectcomputing.checkins.services.memberprofile.currentuser.CurrentUserServices;
+import com.objectcomputing.checkins.services.reviews.ReviewAssignment;
+import com.objectcomputing.checkins.services.reviews.ReviewAssignmentRepository;
 import com.objectcomputing.checkins.services.reviews.ReviewPeriod;
 import com.objectcomputing.checkins.services.reviews.ReviewPeriodRepository;
 import com.objectcomputing.checkins.util.Util;
-import io.micronaut.context.annotation.Property;
+import io.micronaut.context.annotation.Value;
+import io.micronaut.core.io.Readable;
+import io.micronaut.core.io.IOUtils;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.BufferedReader;
+import java.time.format.DateTimeFormatter;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -25,7 +36,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.objectcomputing.checkins.services.validate.PermissionsValidation.NOT_AUTHORIZED_MSG;
 
@@ -34,36 +44,42 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
     private static final Logger LOG = LoggerFactory.getLogger(FeedbackRequestServicesImpl.class);
 
-    public static final String FEEDBACK_REQUEST_NOTIFICATION_SUBJECT = "check-ins.application.feedback.notifications.subject";
-    public static final String FEEDBACK_REQUEST_NOTIFICATION_CONTENT = "check-ins.application.feedback.notifications.content";
-    public static final String WEB_UI_URL = "check-ins.web-address";
     private final FeedbackRequestRepository feedbackReqRepository;
     private final CurrentUserServices currentUserServices;
     private final MemberProfileServices memberProfileServices;
     private final ReviewPeriodRepository reviewPeriodRepository;
-    private EmailSender emailSender;
+    private final ReviewAssignmentRepository reviewAssignmentRepository;
+    private final EmailSender emailSender;
     private final String notificationSubject;
     private final String webURL;
+
+    private enum CompletionEmailType { REVIEWERS, SUPERVISOR }
+    private record ReviewPeriodInfo(String subject, LocalDate closeDate) {}
+    @Value("classpath:mjml/feedback_request.mjml")
+    private Readable feedbackRequestTemplate;
+    @Value("classpath:mjml/update_request.mjml")
+    private Readable updateRequestTemplate;
+    @Value("classpath:mjml/reviewer_email.mjml")
+    private Readable reviewerTemplate;
+    @Value("classpath:mjml/supervisor_email.mjml")
+    private Readable supervisorTemplate;
 
     public FeedbackRequestServicesImpl(FeedbackRequestRepository feedbackReqRepository,
                                        CurrentUserServices currentUserServices,
                                        MemberProfileServices memberProfileServices,
                                        ReviewPeriodRepository reviewPeriodRepository,
-                                       @Named(MailJetFactory.HTML_FORMAT) EmailSender emailSender,
-                                       @Property(name = FEEDBACK_REQUEST_NOTIFICATION_SUBJECT) String notificationSubject,
-                                       @Property(name = WEB_UI_URL) String webURL
+                                       ReviewAssignmentRepository reviewAssignmentRepository,
+                                       @Named(MailJetFactory.MJML_FORMAT) EmailSender emailSender,
+                                       CheckInsConfiguration checkInsConfiguration
     ) {
         this.feedbackReqRepository = feedbackReqRepository;
         this.currentUserServices = currentUserServices;
         this.memberProfileServices = memberProfileServices;
         this.reviewPeriodRepository = reviewPeriodRepository;
+        this.reviewAssignmentRepository = reviewAssignmentRepository;
         this.emailSender = emailSender;
-        this.notificationSubject = notificationSubject;
-        this.webURL = webURL;
-    }
-
-    public void setEmailSender(EmailSender emailSender) {
-        this.emailSender = emailSender;
+        this.notificationSubject = checkInsConfiguration.getApplication().getFeedback().getRequestSubject();
+        this.webURL = checkInsConfiguration.getWebAddress();
     }
 
     private void validateMembers(FeedbackRequest feedbackRequest) {
@@ -87,6 +103,7 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     }
 
     @Override
+    @RequiredPermission(Permission.CAN_CREATE_FEEDBACK_REQUEST)
     public FeedbackRequest save(FeedbackRequest feedbackRequest) {
         validateMembers(feedbackRequest);
         if (!createIsPermitted(feedbackRequest.getRequesteeId())) {
@@ -112,19 +129,29 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
     public void sendNewRequestEmail(FeedbackRequest storedRequest) {
         MemberProfile creator = memberProfileServices.getById(storedRequest.getCreatorId());
+        MemberProfile reviewer = memberProfileServices.getById(storedRequest.getRecipientId());
         MemberProfile requestee = memberProfileServices.getById(storedRequest.getRequesteeId());
-        String senderName = creator.getFirstName() + " " + creator.getLastName();
-        String newContent = "<h1>You have received a feedback request.</h1>" +
-                "<p><b>" + senderName + "</b> is requesting feedback on <b>" + requestee.getFirstName() + " " + requestee.getLastName() + "</b> from you.</p>";
-        if (storedRequest.getDueDate() != null) {
-            newContent += "<p>This request is due on " + storedRequest.getDueDate().getMonth() + " " + storedRequest.getDueDate().getDayOfMonth() + ", " + storedRequest.getDueDate().getYear() + ".";
-        }
-        newContent += "<p>Please go to your unique link at " + webURL + "/feedback/submit?request=" + storedRequest.getId() + " to complete this request.</p>";
+        String senderName = MemberProfileUtils.getFullName(creator);
 
-//        LOG.warn("Pretending to send an email about the new request to "+memberProfileServices.getById(storedRequest.getRecipientId()).getFirstName());
-        if (!storedRequest.getRecipientId().equals(storedRequest.getRequesteeId())) {
-            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, memberProfileServices.getById(storedRequest.getRecipientId()).getWorkEmail());
-        }
+        String newContent = String.format(
+                                templateToString(feedbackRequestTemplate),
+                                reviewer.getFirstName(), senderName,
+                                storedRequest.getRecipientId().equals(storedRequest.getRequesteeId()) ?
+                                  "" :
+                                  String.format("on <strong>%s</strong> ",
+                                                MemberProfileUtils.getFullName(requestee)),
+                                storedRequest.getDueDate() == null ?
+                                    "This request does not have a due date." :
+                                    String.format("This request is due on %s %d, %d.",
+                                                  storedRequest.getDueDate().getMonth(),
+                                                  storedRequest.getDueDate().getDayOfMonth(),
+                                                  storedRequest.getDueDate().getYear()),
+                                String.format("%s/feedback/submit?request=%s",
+                                              webURL, storedRequest.getId().toString()));
+
+        emailSender.sendEmail(senderName, creator.getWorkEmail(),
+                              notificationSubject, newContent,
+                              reviewer.getWorkEmail());
     }
 
     @Override
@@ -148,15 +175,20 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
         validateMembers(originalFeedback);
 
+        Set<ReviewAssignment> reviewAssignmentsSet = Set.of();
+        if (feedbackRequest != null && feedbackRequest.getReviewPeriodId() != null && feedbackRequest.getRequesteeId() != null) {
+            reviewAssignmentsSet = reviewAssignmentRepository.findByReviewPeriodIdAndRevieweeId(feedbackRequest.getReviewPeriodId(), feedbackRequest.getRequesteeId());
+        }        
+
         boolean reassignAttempted = !Objects.equals(originalFeedback.getRecipientId(), feedbackRequest.getRecipientId());
         boolean dueDateUpdateAttempted = !Objects.equals(originalFeedback.getDueDate(), feedbackRequest.getDueDate());
         boolean submitDateUpdateAttempted = !Objects.equals(originalFeedback.getSubmitDate(), feedbackRequest.getSubmitDate());
 
         // If a status update is made to anything other than submitted by the requestee, throw an error.
-        if (!feedbackRequest.getStatus().equals("submitted") && !Objects.equals(originalFeedback.getStatus(), feedbackRequest.getStatus())) {
-            if (currentUserServices.getCurrentUser().getId().equals(originalFeedback.getRequesteeId())) {
-                throw new PermissionException(NOT_AUTHORIZED_MSG);
-            }
+        if (!"submitted".equals(feedbackRequest.getStatus())
+                && !Objects.equals(originalFeedback.getStatus(), feedbackRequest.getStatus())
+                && currentUserServices.getCurrentUser().getId().equals(originalFeedback.getRequesteeId())) {
+            throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
         if (reassignAttempted) {
@@ -187,20 +219,20 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         }
 
         FeedbackRequest storedRequest = feedbackReqRepository.update(feedbackRequest);
+        MemberProfile reviewer = memberProfileServices.getById(storedRequest.getRecipientId());
         MemberProfile requestee = memberProfileServices.getById(storedRequest.getRequesteeId());
         // Send email if the feedback request has been reopened for edits
         if (originalFeedback.getStatus().equals("submitted") && feedbackRequest.getStatus().equals("sent")) {
             MemberProfile creator = memberProfileServices.getById(storedRequest.getCreatorId());
+            String senderName = MemberProfileUtils.getFullName(creator);
+            String newContent = String.format(
+                                  templateToString(updateRequestTemplate),
+                                  reviewer.getFirstName(), senderName,
+                                  MemberProfileUtils.getFullName(requestee),
+                                  String.format("%s/feedback/submit?request=%s",
+                                                webURL, storedRequest.getId().toString()));
 
-            String senderName = creator.getFirstName() + " " + creator.getLastName();
-            String newContent = "<h1>You have received edit access to a feedback request.</h1>" +
-                    "<p><b>" + senderName +
-                    "</b> has reopened the feedback request on <b>" +
-                    requestee.getFirstName() + " " + requestee.getLastName() + "</b> from you." +
-                    "You may make changes to your answers, but you will need to submit the form again when finished.</p>";
-            newContent += "<p>Please go to your unique link at " + webURL + "/feedback/submit?request=" + storedRequest.getId() + " to complete this request.</p>";
-//            LOG.warn("Pretending to send an email about the reopened request to "+memberProfileServices.getById(storedRequest.getRecipientId()).getFirstName());
-            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, memberProfileServices.getById(storedRequest.getRecipientId()).getWorkEmail());
+            emailSender.sendEmail(senderName, creator.getWorkEmail(), notificationSubject, newContent, reviewer.getWorkEmail());
         }
 
         // Send email if the feedback request has been reassigned
@@ -210,13 +242,21 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
         // Send self-review completion email to supervisor and pdl if appropriate
         if (currentUserServices.getCurrentUser().getId().equals(requestee.getId())) {
-            sendSelfReviewCompletionEmail(feedbackRequest);
+            sendSelfReviewCompletionEmailToSupervisor(feedbackRequest);
         }
+
+        // Send email to reviewers.  But, only when the requestee is the
+        // recipient (i.e., a self-review).
+        if (reviewAssignmentsSet != null && reviewAssignmentsSet.size() > 0 &&
+            feedbackRequest.getRequesteeId().equals(feedbackRequest.getRecipientId())) {
+            sendSelfReviewCompletionEmailToReviewers(feedbackRequest, reviewAssignmentsSet);    
+        }        
 
         return storedRequest;
     }
 
     @Override
+    @RequiredPermission(Permission.CAN_DELETE_FEEDBACK_REQUEST)
     public void delete(UUID id) {
         final Optional<FeedbackRequest> feedbackReq = feedbackReqRepository.findById(id);
         if (feedbackReq.isEmpty()) {
@@ -231,15 +271,17 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     }
 
     @Override
+    // This method cannot have
+    // @RequiredPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST) because
+    // regular members need to be able to get feedback requests.  This
+    // permission is manually checked elsewhere.
     public FeedbackRequest getById(UUID id) {
         final Optional<FeedbackRequest> feedbackReq = feedbackReqRepository.findById(id);
         if (feedbackReq.isEmpty()) {
             throw new NotFoundException("No feedback req with id " + id);
         }
-        final LocalDate sendDate = feedbackReq.get().getSendDate();
-        final UUID requesteeId = feedbackReq.get().getRequesteeId();
-        final UUID recipientId = feedbackReq.get().getRecipientId();
-        if (!getIsPermitted(requesteeId, recipientId, sendDate)) {
+
+        if (!getIsPermitted(feedbackReq.get())) {
             throw new PermissionException(NOT_AUTHORIZED_MSG);
         }
 
@@ -247,6 +289,10 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
     }
 
     @Override
+    // This method cannot have
+    // @RequiredPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST) because
+    // regular members need to be able to get feedback requests.  This
+    // permission is manually checked elsewhere.
     public List<FeedbackRequest> findByValues(UUID creatorId, UUID requesteeId, UUID recipientId, LocalDate oldestDate, UUID reviewPeriodId, UUID templateId, List<UUID> requesteeIds) {
         final UUID currentUserId = currentUserServices.getCurrentUser().getId();
         if (currentUserId == null) {
@@ -264,36 +310,63 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
 
         feedbackReqList = feedbackReqList.stream().filter((FeedbackRequest request) -> {
             boolean visible = false;
-            if (currentUserServices.isAdmin()) {
+            if (currentUserServices.hasPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST)) {
                 visible = true;
             } else if (request != null) {
-                if (currentUserId.equals(request.getCreatorId())) visible = true;
-                if (isSupervisor(request.getRequesteeId(), currentUserId)) visible = true;
-                if (currentUserId.equals(request.getRecipientId())) visible = true;
+                if (currentUserId.equals(request.getCreatorId()) ||
+                    isSupervisor(request.getRequesteeId(), currentUserId) ||
+                    currentUserId.equals(request.getRecipientId()) ||
+                    selfRevieweeIsCurrentUserReviewee(request, currentUserId)) {
+                    visible = true;
+                }
             }
             return visible;
-        }).collect(Collectors.toList());
+        }).toList();
 
         return feedbackReqList;
     }
 
     private boolean isSupervisor(UUID requesteeId, UUID currentUserId) {
-        return requesteeId != null ? memberProfileServices.getSupervisorsForId(requesteeId).stream().filter(profile -> currentUserId.equals(profile.getId())).findAny().isPresent() : false;
+        return requesteeId != null
+                && memberProfileServices.getSupervisorsForId(requesteeId).stream().anyMatch(profile -> currentUserId.equals(profile.getId()));
+    }
+
+    public boolean selfRevieweeIsCurrentUserReviewee(FeedbackRequest request,
+                                                     UUID currentUserId) {
+        // If we are looking at a self-review request, see if there is a review
+        // request in the same review period that is assigned to the current
+        // user and the requestee is the same as the self-review request.  If
+        // so, this user is allowed to see the self-review request.
+        if (request.getRecipientId().equals(request.getRequesteeId())) {
+            List<FeedbackRequest> other = feedbackReqRepository.findByValues(
+                null, request.getRecipientId().toString(),
+                currentUserId.toString(), null,
+                Util.nullSafeUUIDToString(request.getReviewPeriodId()),
+                null);
+            return (other.size() == 1);
+        }
+        return false;
     }
 
     private boolean createIsPermitted(UUID requesteeId) {
-        final boolean isAdmin = currentUserServices.isAdmin();
+        if (currentUserServices.hasPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST)) {
+            return true;
+        }
+
         final UUID currentUserId = currentUserServices.getCurrentUser().getId();
         MemberProfile requestee = memberProfileServices.getById(requesteeId);
         boolean isRequesteesSupervisor = isSupervisor(requesteeId, currentUserId);
         final UUID requesteePDL = requestee.getPdlId();
 
         //a PDL may create a request for a user who is assigned to them
-        return isAdmin || currentUserId.equals(requesteePDL) || isRequesteesSupervisor || currentUserId.equals(requesteeId);
+        return  currentUserId.equals(requesteePDL) || isRequesteesSupervisor || currentUserId.equals(requesteeId);
     }
 
-    private boolean getIsPermitted(UUID requesteeId, UUID recipientId, LocalDate sendDate) {
-        LocalDate today = LocalDate.now();
+    private boolean getIsPermitted(FeedbackRequest feedbackReq) {
+        final LocalDate sendDate = feedbackReq.getSendDate();
+        final UUID requesteeId = feedbackReq.getRequesteeId();
+        final UUID recipientId = feedbackReq.getRecipientId();
+        final LocalDate today = LocalDate.now();
         final UUID currentUserId = currentUserServices.getCurrentUser().getId();
 
         // The recipient can only access the feedback request after it has been sent
@@ -301,32 +374,36 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
             throw new PermissionException("You are not permitted to access this request before the send date.");
         }
 
-        return createIsPermitted(requesteeId) || currentUserId.equals(recipientId);
+        return createIsPermitted(requesteeId) ||
+               currentUserId.equals(recipientId) ||
+               selfRevieweeIsCurrentUserReviewee(feedbackReq, currentUserId);
     }
 
     private boolean updateDueDateIsPermitted(FeedbackRequest feedbackRequest) {
-        return isCurrentUserAdminOrOwner(feedbackRequest);
+        return currentUserCanAdministerOrOwner(feedbackRequest);
     }
 
     private boolean reassignIsPermitted(FeedbackRequest feedbackRequest) {
-        return isCurrentUserAdminOrOwner(feedbackRequest) && !feedbackRequest.getStatus().equals("submitted");
+        return currentUserCanAdministerOrOwner(feedbackRequest) && !feedbackRequest.getStatus().equals("submitted");
     }
 
-    private boolean isCurrentUserAdminOrOwner(FeedbackRequest feedbackRequest) {
-        boolean isAdmin = currentUserServices.isAdmin();
+    private boolean currentUserCanAdministerOrOwner(FeedbackRequest feedbackRequest) {
+        if (currentUserServices.hasPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST)) {
+            return true;
+        }
+
         UUID currentUserId = currentUserServices.getCurrentUser().getId();
-        return isAdmin || currentUserId.equals(feedbackRequest.getCreatorId());
+        return currentUserId.equals(feedbackRequest.getCreatorId());
     }
 
     private boolean updateSubmitDateIsPermitted(FeedbackRequest feedbackRequest) {
-        boolean isAdmin = currentUserServices.isAdmin();
-        UUID currentUserId = currentUserServices.getCurrentUser().getId();
-        if (isAdmin) {
+        if (currentUserServices.hasPermission(Permission.CAN_ADMINISTER_FEEDBACK_REQUEST)) {
             return true;
-        } else if (currentUserId.equals(feedbackRequest.getCreatorId())) {
-            if (feedbackRequest.getSubmitDate() != null) {
-                return true;
-            }
+        }
+
+        UUID currentUserId = currentUserServices.getCurrentUser().getId();
+        if (currentUserId.equals(feedbackRequest.getCreatorId()) && feedbackRequest.getSubmitDate() != null) {
+            return true;
         }
 
         return currentUserId.equals(feedbackRequest.getRecipientId());
@@ -342,63 +419,129 @@ public class FeedbackRequestServicesImpl implements FeedbackRequestServices {
         return feedbackRequest;
     }
 
-    public void sendSelfReviewCompletionEmail(FeedbackRequest feedbackRequest) {
-        MemberProfile currentUserProfile = currentUserServices.getCurrentUser();
-        MemberProfile pdlProfile = null;
-        MemberProfile supervisorProfile = null;
-
-        try {
-            if (currentUserProfile.getPdlId() != null) {
-                pdlProfile = memberProfileServices.getById(currentUserProfile.getPdlId());
+    public void sendSelfReviewCompletionEmailToReviewers(FeedbackRequest feedbackRequest, Set<ReviewAssignment> reviewAssignmentSet) {
+        // Send an email to each reviewer.
+        reviewAssignmentSet.forEach(reviewAssignment -> {
+            MemberProfile memberProfileReviewer = memberProfileServices.getById(reviewAssignment.getReviewerId());
+            if (memberProfileReviewer != null &&
+                memberProfileReviewer.getWorkEmail() != null) {
+                sendSelfReviewCompletionEmail(feedbackRequest,
+                                              memberProfileReviewer,
+                                              CompletionEmailType.REVIEWERS);
             }
-        } catch (NullPointerException e) {
-            LOG.error("PDL could not be found for self-review completion email");
-        }
+        });
+    }
 
+    public void sendSelfReviewCompletionEmailToSupervisor(FeedbackRequest feedbackRequest) {
+        MemberProfile currentUserProfile = currentUserServices.getCurrentUser();
         try {
             if (currentUserProfile.getSupervisorid() != null) {
-                supervisorProfile = memberProfileServices.getById(currentUserProfile.getSupervisorid());
+                MemberProfile supervisorProfile =
+                    memberProfileServices.getById(
+                        currentUserProfile.getSupervisorid());
+                sendSelfReviewCompletionEmail(feedbackRequest,
+                                              supervisorProfile,
+                                              CompletionEmailType.SUPERVISOR);
             }
-        } catch (NullPointerException e) {
-            LOG.error("Supervisor could not be found for self-review completion email");
+        } catch (NotFoundException e) {
+            LOG.error("Supervisor could not be found for completion email");
+        }
+    }
+
+    private void sendSelfReviewCompletionEmail(FeedbackRequest feedbackRequest,
+                                               MemberProfile reviewer,
+                                               CompletionEmailType emailType) {
+        // Build the email contents.
+        Email email;
+        MemberProfile currentUserProfile = currentUserServices.getCurrentUser();
+        switch(emailType) {
+            case CompletionEmailType.REVIEWERS:
+                email = buildReviewerEmail(feedbackRequest, reviewer,
+                                           currentUserProfile);
+                break;
+            default:
+            case CompletionEmailType.SUPERVISOR:
+                email = buildSupervisorEmail(feedbackRequest, reviewer,
+                                             currentUserProfile);
+                break;
         }
 
+        // Send the email.
+        try {
+            emailSender.sendEmail(null, null, email.getSubject(),
+                                  email.getContents(),
+                                  reviewer.getWorkEmail());
+        } catch (Exception e) {
+           LOG.error("Unable to send the self-review completion email.", e);
+        }
+    }
+
+    private ReviewPeriodInfo getSelfReviewInfo(
+                                 FeedbackRequest feedbackRequest, String name) {
         String reviewPeriodString = "";
+        LocalDate closeDate = null;
         if (feedbackRequest.getReviewPeriodId() != null) {
             Optional<ReviewPeriod> reviewPeriodOpt = reviewPeriodRepository.findById(feedbackRequest.getReviewPeriodId());
             if (reviewPeriodOpt.isPresent()) {
                 ReviewPeriod reviewPeriod = reviewPeriodOpt.get();
+                if (reviewPeriod.getCloseDate() != null) {
+                    closeDate = reviewPeriod.getCloseDate().toLocalDate();
+                }
                 reviewPeriodString = String.format(" for %s", reviewPeriod.getName());
             }
         }
+        return new ReviewPeriodInfo(
+                       String.format("%s has finished their self-review%s.",
+                                     name, reviewPeriodString), closeDate);
+    }
 
-        String subject = String.format("%s %s has finished their self-review%s.",
-                currentUserProfile.getFirstName(), currentUserProfile.getLastName(),
-                reviewPeriodString);
-        StringBuilder bodyBuilder = new StringBuilder(String.format("Self-review has been completed by %s %s%s.<br>",
-                currentUserProfile.getFirstName(), currentUserProfile.getLastName(), reviewPeriodString));
+    private Email buildReviewerEmail(FeedbackRequest feedbackRequest,
+                                     MemberProfile reviewerProfile,
+                                     MemberProfile currentUserProfile) {
+        String reviewerName = reviewerProfile.getFirstName();
+        String revieweeName = MemberProfileUtils.getFullName(currentUserProfile);
+        UUID requestId = feedbackRequest.getId();
+        String selfReviewURL = String.format("%s/feedback/view/responses/?request=%s", webURL, requestId == null ? "none" : requestId.toString());
+        ReviewPeriodInfo info = getSelfReviewInfo(feedbackRequest, revieweeName);
+        LocalDate closeDate = info.closeDate();
+        String ending = closeDate == null ? "the review period closes" :
+                 closeDate.format(DateTimeFormatter.ofPattern("MM/dd/yyyy"));
 
-        Set<String> recipients = new HashSet<>();
-        if (pdlProfile != null) {
-            bodyBuilder.append(String.format("PDL: %s %s<br>", pdlProfile.getFirstName(), pdlProfile.getLastName()));
-            recipients.add(pdlProfile.getWorkEmail());
-        }
+        String body = String.format(templateToString(reviewerTemplate),
+                                    revieweeName, reviewerName, revieweeName,
+                                    selfReviewURL, ending);
+        Email email = new Email();
+        email.setSubject(info.subject());
+        email.setContents(body);
+        return email;
+    }
 
-        if (supervisorProfile != null) {
-            bodyBuilder.append(String.format("Supervisor: %s %s<br>", supervisorProfile.getFirstName(), supervisorProfile.getLastName()));
-            recipients.add(supervisorProfile.getWorkEmail());
-        }
+    private Email buildSupervisorEmail(FeedbackRequest feedbackRequest,
+                                       MemberProfile supervisorProfile,
+                                       MemberProfile currentUserProfile) {
+        String supervisorName = supervisorProfile == null ? "Supervisor" :
+                                   supervisorProfile.getFirstName();
+        String revieweeName = MemberProfileUtils.getFullName(currentUserProfile);
+        UUID requestId = feedbackRequest.getId();
+        String selfReviewURL = String.format("%s/feedback/view/responses/?request=%s", webURL, requestId == null ? "none" : requestId.toString());
+        ReviewPeriodInfo info = getSelfReviewInfo(feedbackRequest, revieweeName);
 
-        bodyBuilder.append("<br>It is now your turn in their review process. Please complete your portion in a timely manner.");
+        String body = String.format(templateToString(supervisorTemplate),
+                                    supervisorName, revieweeName,
+                                    selfReviewURL);
 
-        String body = bodyBuilder.toString();
+        Email email = new Email();
+        email.setSubject(info.subject());
+        email.setContents(body);
+        return email;
+    }
 
-        if (pdlProfile != null || supervisorProfile != null) {
-            try {
-                emailSender.sendEmail(null, null, subject, body, recipients.toArray(new String[0]));
-            } catch (Exception e) {
-                LOG.error("Unable to send self-review completion email to PDL/Supervisor", e);
-            }
+    private String templateToString(Readable template) {
+        try {
+            return IOUtils.readText(new BufferedReader(template.asReader()));
+        } catch (Exception ex) {
+            LOG.error(ex.toString());
+            return "";
         }
     }
 }
