@@ -1,6 +1,7 @@
 package com.objectcomputing.checkins.services.memberprofile.currentuser;
 
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
+import com.objectcomputing.checkins.services.memberprofile.MemberProfileController;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileServices;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfileUtils;
 import com.objectcomputing.checkins.services.permissions.Permission;
@@ -19,12 +20,9 @@ import io.micronaut.security.rules.SecurityRule;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 import java.net.URI;
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
 
 @Controller("/services/member-profiles/current")
 @ExecuteOn(TaskExecutors.BLOCKING)
@@ -65,12 +63,11 @@ public class CurrentUserController {
 
         MemberProfile user = currentUserServices.findOrSaveUser(firstName, lastName, workEmail);
 
-        user.setLastSeen(LocalDate.now());
-        memberProfileServices.updateProfile(user);
+        memberProfileServices.updateLastSeen(user.getId());
         List<Permission> permissions = rolePermissionServices.findUserPermissions(user.getId());
 
         Set<Role> roles = roleServices.findUserRoles(user.getId());
-        List<String> rolesAsString = roles.stream().map(Role::getRole).collect(Collectors.toList());
+        List<String> rolesAsString = roles.stream().map(Role::getRole).toList();
 
         return HttpResponse
                 .ok()
@@ -90,7 +87,7 @@ public class CurrentUserController {
         dto.setPermissions(permissions);
         dto.setRole(roles);
         dto.setImageUrl(imageUrl);
-        dto.setMemberProfile(entity);
+        dto.setMemberProfile(MemberProfileController.fromEntity(entity));
         return dto;
     }
 }
